# ouster_multi

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: driver_params_front.yaml  driver_params_rear.yaml
launch/: dual_driver.launch.py
patches/: increase_udp_rcvbuf.patch
