<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouster_multi</name>
  <version>0.1.0</version>
  <description>Dual Ouster LiDAR driver launch configuration</description>
  <maintainer email="hoa0202@github.com">hoa0202</maintainer>
  <license>MIT</license>

  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
